--- a/assets/styles/base.scss
+++ b/assets/styles/base.scss
@@ -98,6 +98,12 @@ html, body{
   }
 }
 
+//taille des icon dans les schéma
+.icon{
+  width: 64px;
+  height: auto;
+}
+
 
 //footer
 .footer{
@@ -695,6 +701,25 @@ p.accordionTitle{
 
   *::-webkit-scrollbar-thumb:hover{
     background-color: $pastelHover;
+  }
+
+  //taille icon dans les schémas
+  .icon{
+    width: 128px;
+  }
+
+  //encadrement texte violet
+  .textPurple{
+    border-radius: 0 0 0 15px;
+    border-bottom: 4px solid $pastel;
+    border-left: $pastel 4px solid;
+    width: auto;
+    margin-bottom: 1em;
+    p{
+        font-weight: bold;
+        margin: 1em;
+        width: auto;
+    }
   }
   
   .navbar{
