--- a/assets/styles/comment.scss
+++ b/assets/styles/comment.scss
@@ -37,7 +37,8 @@ $fond :#fffdf0;
     }
 }
 
-#consentement{
+//encadrement texte violet
+.textPurple{
     border-radius: 0 0 0 15px;
     border-bottom: 4px solid $pastel;
     border-left: $pastel 4px solid;
@@ -50,6 +51,7 @@ $fond :#fffdf0;
     }
 }
 
+//btn découvrir notre réseau
 #reseau{
     position: static;
     width: auto;
@@ -75,6 +77,49 @@ $fond :#fffdf0;
 .reseau{
     width: 100%;
     position: relative;
+}
+
+//schema étapes
+.etapes{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    .icon{
+        width: 128px;
+        height: auto;
+    }
+    .between{
+        display: block;
+    }
+    i{
+        margin: 0.5em;
+        transform: rotate(90deg);
+    }
+    .iconSchema{
+        display: flex;
+        position: relative;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        width: 256px;
+        margin: 0 1em;
+        .nb{
+            position: absolute;
+            left: 0;
+            top: 0;
+            padding: 0.3em;
+            border-radius: 0 0 0 15px;
+            border-bottom: 4px solid $pastel;
+            border-left: $pastel 4px solid;
+        }
+    }
+    .etape{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin: 1em;
+    }
 }
 
 //responsive
@@ -118,5 +163,24 @@ $fond :#fffdf0;
         position: absolute;
         top: 0;
         left: calc(400px + 2em);
+    }
+}
+
+// Large devices (desktops, 992px and up)
+@media (min-width: 992px) {
+
+    //schema étapes
+    .etapes{
+        .between{
+            display: none;
+        }
+        i{
+            margin: 1em;
+            transform: rotate(0deg);
+        }
+        .etape{
+            flex-direction: row;
+            align-items: center;
+        }
     }
 }
