--- a/assets/styles/pourquoi.scss
+++ b/assets/styles/pourquoi.scss
@@ -1,1 +1,12 @@
+$pastel : #cec0d6;
+$pastelHover : #b499c3;
+$fond :#fffdf0;
 
+
+
+//encadrement texte violet
+.textPurple{
+    p{
+        font-weight: normal;
+    }
+}
