--- a/templates/pages/CestQuoi.html.twig
+++ b/templates/pages/CestQuoi.html.twig
@@ -45,7 +45,7 @@
         Liquide interstitiel : Le liquide interstitiel remplit l'espace entre les capillaires sanguins et les cellules, Il facilite les échanges de nutriments et de déchets entre ceux-ci.
         <br><br>
         Capillaires : Le rôle des capillaires est de nourrir les tissus en nutriments et oxygène. Reliés aux veines et aux artères, les capillaires sanguins transportent les nutriments, notamment le glucose, et le dioxygène.
-        </span></span> endothéliales. Les cellules souches mésenchymateuses sont utilisées pour le développement d’approches innovantes de thérapie cellulaire régénératrices, car elles jouent un rôle dans la réparation des tissus osseux, cartilagineux, adipeux ou musculaires. Les cellules <span class="tooltip">endothéliales <span class="tooltipText">Les cellules endothéliales sont des cellules minces et plates qui permettent un transfert rapide des substances entre le sang et le liquide interstitiel.
+        </span></span>. Les cellules souches mésenchymateuses sont utilisées pour le développement d’approches innovantes de thérapie cellulaire régénératrices, car elles jouent un rôle dans la réparation des tissus osseux, cartilagineux, adipeux ou musculaires. Les cellules <span class="tooltip">endothéliales <span class="tooltipText">Les cellules endothéliales sont des cellules minces et plates qui permettent un transfert rapide des substances entre le sang et le liquide interstitiel.
         <br><br>
         Liquide interstitiel : Le liquide interstitiel remplit l'espace entre les capillaires sanguins et les cellules, Il facilite les échanges de nutriments et de déchets entre ceux-ci.
         <br><br>
