--- a/templates/pages/Pourquoi.html.twig
+++ b/templates/pages/Pourquoi.html.twig
@@ -22,7 +22,12 @@
     <div class="panel">
         <img class="illustrationAccordeon" src={{ asset ('img/Science.PNG')}}><p>Les cellules souches prélevées dans le sang de cordon vont permettent de développer des activités scientifiques de recherche dans le domaine des cancers du sang et de la thérapie génique. Ainsi grâce à votre don de sang de cordon, les chercheurs peuvent mettre en place des traitements innovants. Lien renvoyant à onglet : Qu’est-ce que le don de sang de cordon « usage scientifique ».
 
-        Grâce à votre don, on peut produire d’autres types de cellules sanguines ou du sérum ou du plasma. Le cordon ombilical peut être également utilisé pour produire différents types de cellules comme les cellules souches mésenchymateuses, ou les cellules endothéliales par exemple.</p>
+        Grâce à votre don, on peut produire d’autres types de cellules sanguines ou du sérum ou du plasma. Le cordon ombilical peut être également utilisé pour produire différents types de cellules comme les cellules souches <span class="tooltip">mésenchymateuses <span class="tooltipText">Les cellules souches mésenchymateuses sont des cellules issues de la moelle osseuse qui jouent un rôle dans la production et réparation de tissus squelettiques tels que le cartilage, les os et les graisses.</span></span>, ou les cellules <span class="tooltip">endothéliales <span class="tooltipText">Les cellules endothéliales sont des cellules minces et plates qui permettent un transfert rapide des substances entre le sang et le liquide interstitiel.
+        <br><br>
+        Liquide interstitiel : Le liquide interstitiel remplit l'espace entre les capillaires sanguins et les cellules, Il facilite les échanges de nutriments et de déchets entre ceux-ci.
+        <br><br>
+        Capillaires : Le rôle des capillaires est de nourrir les tissus en nutriments et oxygène. Reliés aux veines et aux artères, les capillaires sanguins transportent les nutriments, notamment le glucose, et le dioxygène.
+        </span></span>  par exemple.</p>
     </div>
 
     <button class="accordion"><p class="accordionTitle">3.	Une action responsable et solidaire</p></button>
@@ -33,14 +38,14 @@
     <div class="cadre">
         <h2 class="TitleCadre" >Un prélèvement rapide et indolore</h2>
 
-        <p>Le prélèvement de sang de cordon est un acte indolore, rapide et sans danger pour la mère et l’enfant. Il ne modifie en aucun cas le déroulement de l’accouchement et les gestes médicaux. Votre prélèvement se déroulera dans les meilleures conditions possibles, c’est-à-dire que si l’équipe médicale juge que la situation peut potentiellement présenter un risque direct ou indirect pour votre enfant ou vous-même, elle ne prendra aucun risque et le prélèvement n’aura pas lieu malgré votre accord donné.
+        <p>Le prélèvement de sang de cordon est un <strong>acte indolore, rapide et sans danger</strong> pour la mère et l’enfant. Il ne modifie en aucun cas le déroulement de l’accouchement et les gestes médicaux. Votre prélèvement se déroulera dans les meilleures conditions possibles, c’est-à-dire que si l’équipe médicale juge que la situation peut potentiellement présenter un risque direct ou indirect pour votre enfant ou vous-même, elle ne prendra aucun risque et le prélèvement n’aura pas lieu malgré votre accord donné.
         De plus cet acte ne change rien en ce qui concerne votre prise en charge et celle de votre enfant, elle reste la même, c’est-à-dire que le prélèvement de sang de cordon ne change en rien à l’attention portée à la mère et à son bébé une fois l’accouchement terminé.</p>
     </div>
     
 
     <h1>Les principes du don de sang de cordon</h1>
     <h2>Un acte bénévole et solidaire</h2>
-    <div class="illustrated"><p><img class="illustrationLeftIcon" src={{ asset ('img/solidaire-removebg-preview.PNG')}}><p>Votre don de sang de cordon peut sauver des vies et redonner espoir au personnes atteintes de maladies graves. Vous êtes libre de réaliser ou non ce don. C’est un acte bénévole, aucune indemnité ni compensation financière ne vous sera versées. Si vous acceptez le principe, vous pourrez alors en discuter avec une personne du corps médical de votre choix afin d’avoir toutes les explications que vous désirez. A la suite de de cet entretien, une fiche informative vous sera remise ainsi que le document de consentement.</p></div>
+    <p>Votre don de sang de cordon peut sauver des vies et redonner espoir au personnes atteintes de maladies graves. Vous êtes libre de réaliser ou non ce don. C’est un acte bénévole, aucune indemnité ni compensation financière ne vous sera versées. Si vous acceptez le principe, vous pourrez alors en discuter avec une personne du corps médical de votre choix afin d’avoir toutes les explications que vous désirez. A la suite de de cet entretien, une fiche informative vous sera remise ainsi que le document de consentement.</p>
     <h2>Un acte anonyme</h2>
     <p>Lorsque le prélèvement sera effectué, il sera envoyé à l’EFS qui se chargera de l’anonymisation avant de le céder à LYMPHOBANK, ainsi LYMPHOBANK n’aura en aucun cas accès aux données identifiantes vous concernant ou concernant votre enfant, qu’il s’agisse de données directement identifiantes (nom, prénom, coordonnées…) ou indirectement identifiantes (date de naissance, sexe, groupe sanguin…)</p>
     <h2>Un acte gratuit</h2>
@@ -56,10 +61,18 @@
         <p>si vous souhaitez demander la destruction des produits en stock conservés par LYMPHOBANK, aucune justification ne vous sera demandée. Pour ce faire, il vous suffira de vous adresser à l’EFS qui transmettra votre requête à LYMPHOBANK. LYMPHOBANK vous transmettra alors, via l’EFS, un certificat de destruction. Compte tenu du processus d’anonymisation, il est inutile d’adresser votre requête directement à LBK qui n’a pas accès à vos données identifiantes et ne pourra donc pas y répondre. En revanche, il n’est plus possible de réaliser la destruction des produits après que ceux-ci ait été cédés à un laboratoire de recherche.</p>
     </div>
     <h2>Le non-profit</h2>
-    <p>LYMPHOBANK ne tire aucun profit personnel sur les dons de sang placentaire récoltés. Les bénéfices liés au don de sang sont intégralement réinvestis dans la start-up. Conformément à notre Charte d’engagement (disponible sur <a href="www.lymphobank.fr">www.lymphobank.fr</a> ), les bénéfices réalisés ne sont pas redistribués à la Direction, au personnel ou aux éventuels investisseurs de la société, sous quelque forme que ce soit. Un comité de surveillance constitué de représentants de l’EFS et de la Fédération
+    <p>LYMPHOBANK ne tire <strong>aucun profit personnel</strong> sur les dons de sang placentaire récoltés. Les bénéfices liés au don de sang sont intégralement réinvestis dans la start-up. Conformément à notre Charte d’engagement (disponible sur <a href="www.lymphobank.fr">www.lymphobank.fr</a> ), les bénéfices réalisés ne sont pas redistribués à la Direction, au personnel ou aux éventuels investisseurs de la société, sous quelque forme que ce soit. Un comité de surveillance constitué de représentants de l’EFS et de la Fédération
     Française pour le Don de Sang Bénévole a accès aux comptes de résultat de la start-up et peut réaliser des audits comptables afin de s’assurer du respect de ses engagements.
     Ainsi, nos partenaires sont les utilisateurs finaux, ils ont l’interdiction de revendre les cellules fournies à un intermédiaires sans y avoir apporter une valeur ajoutée. 
     </p>
+
+    <div class="textPurple"><p><strong>Note :</strong> si vous souhaitez donner votre sang de cordon pour un usage thérapeutique, sachez qu’environ deux tiers des dons ne sont pas utilisables pour une greffe néanmoins, ils peuvent être utilisés pour la recherche scientifique. 
+    <br><br> 
+    Si vous souhaitez conserver votre don pour votre enfant, sachez que le don de sang placentaire n’est pas un don autologue autrement dit pour soi-même. En France, la conservation de cellules souches pour soi est interdite. Des banques de sang placentaires privées et commerciales permettent de stocker ce sang placentaire à l’étranger en vue d’une greffe hypothétique pour votre enfant à naître. 
+    « Ce service est payant et n’est recommandé ni par le Comité Consultatif National d’Ethique ni par le Collège National des Gynécologues Obstétricien Français, en raison de l’incertitude sur l’utilisation de ces cellules dans l’état actuel des connaissances. » issu du Banque-de-Sang-Placentaire.pdf du CHU de Montpellier. 
+    </p></div>
+
+    
 
 {% endblock %}
 
