--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -68,8 +68,18 @@
                 {% endfor %}
             </figure>
         </div>
-
-        <h2>actu</h2>
+        
+        <h1>Actualités :</h1>
+        <div class="actus">
+            <div class="grid-gallery">
+                <div class="grid-item"></div>
+                <div class="grid-item"></div>
+                <div class="grid-item"></div>
+                <div class="grid-item"></div>
+                <div class="grid-item"></div>
+                <div class="grid-item"></div>
+            </div>
+        </div>
 
         <h2>logo</h2>
         
