--- a/assets/styles/home.scss
+++ b/assets/styles/home.scss
@@ -98,93 +98,28 @@ $fond :#fffdf0;
     height: auto;
 }
 
-
-/* Slideshow container */
-.slideshow-container {
-    width: 100%;
-    position: relative;
-    margin: auto;
-    height: 150px;
-    .title{
-        text-align: center;
-        position: absolute;
+//actus
+.actus{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 76vw;
+    .grid-gallery{
+        max-width: 1500px;
         width: 100%;
+        height: auto;
+        margin: 30px auto;
+        display: grid;
+        grid-template-columns: repeat(auto-fill, 280px);
+        justify-content: center;
+        grid-gap: 15px;
+    } 
+    .grid-item{
+        width: 280px;
+        height: 187px;
+        background: black;
     }
-    .text {
-        color: black;
-        position: absolute;
-        top: 50%;
-        width: 100%;
-        text-align: center;
-        margin: 1em 0;
-    }
-}
-
-/* Next & previous buttons */
-.prev, .next {
-    cursor: pointer;
-    position: absolute;
-    top: 50%;
-    width: auto;
-    margin-top: -22px;
-    padding: 16px;
-    color: $pastel;
-    font-weight: bold;
-    font-size: 18px;
-    transition: 0.6s ease;
-    border-radius: 0 15px 15px 0;
-    user-select: none;
-}
-
-/* Position the "next button" to the right */
-.next {
-    right: 0;
-    border-radius: 3px 0 0 3px;
-}
-
-/* On hover, add a black background color with a little bit see-through */
-.prev:hover, .next:hover {
-    background-color: $pastelHover;
-}
-
-
-
-
-/* The dots/bullets/indicators */
-.dot {
-    cursor: pointer;
-    height: 15px;
-    width: 15px;
-    margin: 0 2px;
-    background-color: $pastel;
-    border-radius: 50%;
-    display: inline-block;
-    transition: background-color 0.6s ease;
-}
-
-.activeDot, .dot:hover {
-background-color: $pastelHover;
-}
-
-/* Fading animation */
-.fade {
-    -webkit-animation-name: fade;
-    -webkit-animation-duration: 1.5s;
-    animation-name: fade;
-    animation-duration: 1.5s;
-}
-
-
-
-
-@-webkit-keyframes fade {
-    from {opacity: .4}
-    to {opacity: 1}
-}
-
-@keyframes fade {
-    from {opacity: .4}
-    to {opacity: 1}
 }
 
 
@@ -206,7 +141,17 @@ background-color: $pastelHover;
 
 // Small devices (landscape phones, 576px and up)
 @media (min-width: 576px) {
-
+    //actus
+    .actus{
+        .grid-gallery{
+            grid-template-columns: repeat(auto-fill, 450px);
+        } 
+        .grid-item{
+            width: 450px;
+            height: 300px;
+            background: black;
+        }
+    }
 }
 
 // Medium devices (tablets, 768px and up)
