--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -5,6 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>{% block title %}Welcome!{% endblock %}</title> 
         {{ encore_entry_link_tags('scss/base') }}
+        {{ encore_entry_link_tags('scss/tooltip') }}
+        {{ encore_entry_link_tags('scss/accordeon') }}
         {% block stylesheets %}{% endblock %}
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}?v=2" />
         <link rel="preconnect" href="https://fonts.gstatic.com">
