--- a/templates/pages/Quand.html.twig
+++ b/templates/pages/Quand.html.twig
@@ -16,23 +16,23 @@
             <div class="iconSchema"><h2 class="nb">1.</h2><img class="icon" src={{ asset ('img/icons/doctor.svg')}}>
             <h2>Informations sur le don avec une sage-femme</h2></div>
             <i class="fas fa-long-arrow-alt-right fa-4x"></i>
-            <div class="iconSchema"><h2 class="nb">2.</h2><img class="icon" src={{ asset ('img/icons/bottle.svg')}}>
+            <div class="iconSchema"><h2 class="nb">2.</h2><img class="icon" src={{ asset ('img/icons/consent.svg')}}>
             <h2>Lettre de consentement complétée et signée</h2></div>
         </div>
         <i class="fas fa-long-arrow-alt-right fa-4x between"></i>
         <div class="etape">
-            <div class="iconSchema"><h2 class="nb">3.</h2><img class="icon" src={{ asset ('img/icons/syringe.svg')}}>
+            <div class="iconSchema"><h2 class="nb">3.</h2><img class="icon" src={{ asset ('img/icons/child.svg')}}>
             <h2>Accouchement<br>cordon coupé</h2></div>
             <i class="fas fa-long-arrow-alt-right fa-4x"></i>
-            <div class="iconSchema"><h2 class="nb">4.</h2><img class="icon" src={{ asset ('img/icons/blood-transfusion.svg')}}>
+            <div class="iconSchema"><h2 class="nb">4.</h2><img class="icon" src={{ asset ('img/icons/test-tube.svg')}}>
             <h2>Prélèvement du sang de cordon etprise de sang à la maman (VIH, VHB, VHD)</h2></div>
         </div>
         <i class="fas fa-long-arrow-alt-right fa-4x between"></i>
         <div class="etape">
-            <div class="iconSchema"><h2 class="nb">5.</h2><img class="icon" src={{ asset ('img/icons/cordonIncline.png')}}>
+            <div class="iconSchema"><h2 class="nb">5.</h2><img class="icon" src={{ asset ('img/icons/livraison.svg')}}>
             <h2>Conservation du don dans un bac isotherme</h2></div>
             <i class="fas fa-long-arrow-alt-right fa-4x"></i>
-            <div class="iconSchema"><h2 class="nb">6.</h2><img class="icon" src={{ asset ('img/icons/test-tube.svg')}}>
+            <div class="iconSchema"><h2 class="nb">6.</h2><img class="icon" src={{ asset ('img/icons/delivery-truck.svg')}}>
             <h2>Transfert sous 24 h à l'EFS</h2></div>
         </div>
     </div>
