--- a/templates/pages/Comment.html.twig
+++ b/templates/pages/Comment.html.twig
@@ -63,8 +63,33 @@
     </div>
     <h2>Après l’accouchement</h2>
     <p>Votre bébé et vous-même êtes pris en charge par l’équipe médicale. En ce qui concerne votre prélèvement, voici son devenir : </p>
-    <h2>Faire schéma</h2>
-    <p>Si vous souhaitez connaître le devenir de votre don vous pourrez contacter l’EFS ou LYMPHOBANK, vous pourrez avoir des informations l’utilisation de votre prélèvement. </p>
+        <div class="schemaDevenir">
+            <div class="devenir">
+                <img class="icon" src={{ asset ('img/icons/centre-medical.png')}}>
+                <h2>Prélèvement réalisé dans la maternité</h2>
+            </div>
+            <i class="fas fa-long-arrow-alt-right fa-4x"></i>
+            <div class="devenir">
+                <img class="icon" src={{ asset ('img/icons/delivery-truck.svg')}}>
+                <h2>Transfert sous 24h à l'EFS</h2>
+            </div>
+            <i class="fas fa-long-arrow-alt-right fa-4x"></i>
+            <div class="devenir">
+                <img class="icon" src={{ asset ('img/icons/EFSlogo.png')}}>
+                <h2>Anonymisation du prélèvement et qualification du don</h2>
+            </div>
+            <i class="fas fa-long-arrow-alt-right fa-4x"></i>
+            <div class="devenir">
+                <img class="icon" src={{ asset ('img/icons/test-tube.svg')}}>
+                <h2>Test de conformité de la maman</h2>
+            </div>
+            <i class="fas fa-long-arrow-alt-right fa-4x"></i>
+            <div class="devenir">
+                <img id="LogoIcon" class="icon" src={{ asset ('img/icons/LogoLymphobank.png')}}>
+                <h2>Valorisation du don </h2>
+            </div>
+        </div>
+    <p>Si vous souhaitez connaître le devenir de votre don vous pourrez contacter l’EFS ou LYMPHOBANK, vous pourrez avoir des informations sur l’utilisation de votre prélèvement. </p>
     <div class="cardsConditions">
         <div class="card">
             <div class="card-title"><h2>Conditions pour lesquelles le prélèvement a lieu :</h2></div>
