--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -7,6 +7,7 @@
         {{ encore_entry_link_tags('scss/base') }}
         {{ encore_entry_link_tags('scss/tooltip') }}
         {{ encore_entry_link_tags('scss/accordeon') }}
+        {{ encore_entry_link_tags('scss/card') }}
         {% block stylesheets %}{% endblock %}
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}?v=2" />
         <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -27,6 +28,7 @@
             
             </div>
             <a href="/" id="logo"><img src={{asset ('img/baby-boy.png')}}></a>
+            <h2 id="nom">mon-cordon-precieux.fr</h2>
             <label id="nav-btn" for="NavToggle">
                 <div class="menu-btn">
                     <div class="menu-btn-burger"></div>
