--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -28,7 +28,8 @@
             
             </div>
             <a href="/" id="logo"><img src={{asset ('img/baby-boy.png')}}></a>
-            <h2 id="nom">mon-cordon-precieux.fr</h2>
+            <h1 class="nom headerText">mon-cordon-precieux.fr</h1>
+            <h2 class="slogan headerText">Tout savoir sur le don de cordon !</h2>
             <label id="nav-btn" for="NavToggle">
                 <div class="menu-btn">
                     <div class="menu-btn-burger"></div>
