--- a/templates/pages/CestQuoi.html.twig
+++ b/templates/pages/CestQuoi.html.twig
@@ -56,7 +56,7 @@
     <p>Le placenta est également une source de cellules souches mésenchymateuses.</p>
 
     <h2>Schéma explicatif (cliquez pour en savoir plus) :</h2>
-    <div class="schemaDon">
+    {# <div class="schemaDon">
         <div class="schemaDonStart">
             <button class="schemaToogle"><img id="pregnantIcon" class="icon" src={{ asset ('img/icons/pregnant.png')}}></button>
         </div>
@@ -76,7 +76,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> #}
     
     
     <h1>Quel usage pour ce don ?</h1>
