--- a/assets/styles/about.scss
+++ b/assets/styles/about.scss
@@ -59,6 +59,8 @@ $fond :#fffdf0;
     width: 80%;
     height: auto;
     margin: 0 auto;
+    border-radius: 15px;
+    box-shadow: 5px 5px 6px rgba(0,0,0,0.2);
 }
 
 .equipe{
