--- a/assets/styles/cestQuoi.scss
+++ b/assets/styles/cestQuoi.scss
@@ -6,6 +6,14 @@ $fond :#fffdf0;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
+    .card:hover{
+        transform: scale(102%);
+        transition: transform .2s ease-in-out;
+    }
+    .card{
+        transform: scale(100%);
+        transition: transform .2s ease-in-out;
+    }
 }
 
 .cardRecherche{
@@ -29,7 +37,12 @@ $fond :#fffdf0;
             align-items: center;
         }
     }
+    /* .card:hover{
+        transform: scale(102%);
+        transition: transform .3s ease-in-out;
+    } */
 }
+
 
 #cardRechercheTitle{
     margin-top: 2em;
@@ -103,6 +116,10 @@ $fond :#fffdf0;
     width: 80px;
     height: auto;
     margin-top: 2em;
+}
+
+.prodCordon{
+    margin-left: 3em;
 }
 
 
